--- a/.github/workflows/Recovery Build.yaml
+++ b/.github/workflows/Recovery Build.yaml
@@ -36,7 +36,7 @@ on:
       MAKEFILE_NAME:
         description: 'MAKEFILE_NAME'
         required: true
-        default: 'twrp_TB310FU'
+        default: 'twrp_m9'
       BUILD_TARGET:
         description: 'BUILD_TARGET'
         required: true
